--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@types/youtube": "^0.1.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
-    "framer-motion": "^12.0.6",
-    "postcss": "^8.5.1",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.0.6",
+    "openai": "^4.82.0",
+    "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
